Refactor Shopping List domain model: add Lombok annotations for getters and setters, streamline code by removing redundant methods, and enhance documentation for clarity.